almost finished. edit page remaining + styles

--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -36,3 +36,9 @@ textarea {
 .sidebar h2 {
     margin-top: 5px;
 }
+
+.button_link {
+    background: none;
+    border: none;
+    padding: none;
+}
