--- a/encyclopedia/templates/encyclopedia/error.html
+++ b/encyclopedia/templates/encyclopedia/error.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-    <h4>Error: The requested page was not found</h4>
+    <h4>{{ message }}</h4>
 {% endblock %}
