--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -6,4 +6,19 @@
 
 {% block body %}
     
+    {% if search_n == 0 %}    
+        
+        <h3>No search results for query "{{ query }}"...</h3>
+    
+    {% else %}
+
+        <h3>Search results for query "{{ query }}":</h3>
+        <ul>
+            {% for result in search_result %}
+            <li><a href="/wiki/{{ result }}">{{result}}</a></li>
+            {% endfor %}
+        </ul>
+    
+    {% endif %}
+
 {% endblock %}
