--- a/encyclopedia/templates/encyclopedia/new_page.html
+++ b/encyclopedia/templates/encyclopedia/new_page.html
@@ -2,6 +2,13 @@
 
 {% block title %}
 New page
+<style>
+    textarea {
+        height: 70vh;
+        width: 80%;
+        display: block;
+    }
+</style>
 {% endblock %}
 
 {% block body %}
